# ipc-bench

source/: CMakeLists.txt  bench.sh  print_results.sh  run-all.sh
source/common/: CMakeLists.txt  benchmarks.c  benchmarks.h  common.h  parent.c  process.c
source/mmap/: client.c  server.c
source/shm/: client.c  server.c
